syntax = "proto3";
package solana.wen_restart_proto;

enum State {
    INIT = 0;
    LAST_VOTED_FORK_SLOTS = 1;
    HEAVIEST_FORK = 2;
    GENERATING_SNAPSHOT = 3;
    FINISHED_SNAPSHOT = 4;
    WAITING_FOR_SUPERMAJORITY = 5;
    DONE = 6;
}

message MyLastVotedForkSlots {
    uint64 last_vote_slot = 1;
    string last_vote_bankhash = 2;
    uint32 shred_version = 3;
}

message WenRestartProgress {
    State state = 1;
    optional MyLastVotedForkSlots my_last_voted_fork_slots = 2;
}